[workspace]
resolver = "2"
members = [
    "ray-proto",
    "ray-util",
    "ray-common",
    "ray-rpc",
    "ray-stats",
    "ray-observability",
    "ray-pubsub",
    "ray-object-manager",
    "ray-gcs",
    "ray-gcs-rpc-client",
    "ray-raylet",
    "ray-raylet-rpc-client",
    "ray-core-worker",
    "ray-core-worker-pylib",
    "ray-syncer",
    "ray-test-utils",
]

[workspace.package]
version = "3.0.0-dev"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ray-project/ray"

[workspace.dependencies]
# Protobuf / gRPC
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"
tonic-build = "0.12"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
bytes = "1"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Networking / HTTP
hyper = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }

# Data structures
dashmap = "6"
parking_lot = "0.12"
lru = "0.12"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Metrics / Observability
opentelemetry = "0.27"
opentelemetry_sdk = "0.27"
opentelemetry-otlp = "0.27"

# Utilities
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
nix = { version = "0.29", features = ["process", "signal", "net", "mman", "fs", "hostname"] }
libc = "0.2"
async-trait = "0.1"

# Testing
proptest = "1"

# Internal crates
ray-proto = { path = "ray-proto" }
ray-util = { path = "ray-util" }
ray-common = { path = "ray-common" }
ray-rpc = { path = "ray-rpc" }
ray-stats = { path = "ray-stats" }
ray-observability = { path = "ray-observability" }
ray-pubsub = { path = "ray-pubsub" }
ray-object-manager = { path = "ray-object-manager" }
ray-gcs = { path = "ray-gcs" }
ray-gcs-rpc-client = { path = "ray-gcs-rpc-client" }
ray-raylet = { path = "ray-raylet" }
ray-raylet-rpc-client = { path = "ray-raylet-rpc-client" }
ray-core-worker = { path = "ray-core-worker" }
ray-core-worker-pylib = { path = "ray-core-worker-pylib" }
ray-syncer = { path = "ray-syncer" }
ray-test-utils = { path = "ray-test-utils" }
